Add support for https and using a simple "base URL", along with some code cleanup/improvements